// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block + inline 1`] = `
"<p>*a*</p>
<p>> *a*</p>
<p>foo <code>bar</code> baz</p>"
`;

exports[`block 1`] = `
"<p><em>a</em></p>
<p>> <em>a</em></p>
<p>foo <code>bar</code> baz</p>"
`;

exports[`does nothing 1`] = `
"<p><em>a</em></p>
<blockquote>
<p><em>a</em></p>
</blockquote>
<p>foo <code>bar</code> baz</p>"
`;

exports[`inline 1`] = `
"<p>*a*</p>
<blockquote>
<p>*a*</p>
</blockquote>
<p>foo <code>bar</code> baz</p>"
`;

exports[`unknown tokenizer 1`] = `
"<p><em>a</em></p>
<blockquote>
<p><em>a</em></p>
</blockquote>
<p>foo <code>bar</code> baz</p>"
`;
